# rdfxx

rdfxx/: AUTHORS  ChangeLog  README  configure.ac  sassy-check.xml.in
rdfxx/src/: Makefile.am
rdfxx/src/examples/: Makefile.am  foaf.cpp  foaf.rdf  model_files.rdf  model_projections.rdf  ontology_nfo.rdf  ontology_pub.rdf  projection.cpp
rdfxx/src/include/: Makefile.am
rdfxx/src/include/rdfxx/: Makefile.am  except.h  model.hpp  node.hpp  parser.hpp  query.hpp  query_results.hpp  rdfxx.h  serializer.hpp  statement.hpp  storage.hpp  stream.hpp  uri.hpp  world.hpp
rdfxx/src/include/rdfxx/.attic/: exceptions.hpp  query_string.hpp  stores.hpp
rdfxx/src/librdfxx/: Makefile.am  model.cpp  node.cpp  parser.cpp  query.cpp  query_results.cpp  query_string.cpp  serializer.cpp  statement.cpp  storage.cpp  stream.cpp  uri.cpp  world.cpp
rdfxx/src/librdfxx/.attic/: exceptions.cpp  stores.cpp
rdfxx/src/rdf2dot/: Makefile.am  rdf2dot.cpp
rdfxx/src/tests/: Makefile.am  rdfs_7.1_1.rdf  rdfs_app_a_1.rdf  rdftest.cpp  rdftest.h
